--- a/3_Graphs_Tables/make_tables.ipynb
+++ b/3_Graphs_Tables/make_tables.ipynb
@@ -16,10 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "f251f104",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cara/anaconda3/envs/2stagemodel/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import ast\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "cdd7c68a",
    "metadata": {},
    "outputs": [],
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "4a392644",
    "metadata": {},
    "outputs": [],
@@ -142,6 +151,114 @@
     "\"\"\"\n",
     "\n",
     "    return table.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "30332287",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1_cw_dfs = {}\n",
+    "sheet_name = \"params\"\n",
+    "for subreddit in SUBREDDIT_LABELS:\n",
+    "    eval_filepath = f\"../../Outputs/1_thread_start/{subreddit}/2_tuning/tuning_outputs.xlsx\"\n",
+    "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
+    "    \n",
+    "    # Ensure correct column names\n",
+    "    df = df[['n_feats', 'final_class_weights']].rename(columns={\n",
+    "        \"final_class_weights\": \"cws\"\n",
+    "    })\n",
+    "\n",
+    "    s1_cw_dfs[subreddit] = df\n",
+    "\n",
+    "CLASS_NAMES = [\"Stalled\", \"Started\"]\n",
+    "outfile = f\"../../Publication_Outputs/1_Thread_Start/tuning_outputs/class_weights.xlsx\"\n",
+    "\n",
+    "with pd.ExcelWriter(outfile) as writer:\n",
+    "    for sub, df in s1_cw_dfs.items():\n",
+    "        expanded = pd.json_normalize(df[\"cws\"].apply(parse_cw_string))\n",
+    "        df = df.join(expanded)[[\"n_feats\", 0,1]]\n",
+    "        ratios = df[['n_feats']].copy()\n",
+    "        for col in [0,1]:\n",
+    "            ratios[CLASS_NAMES[col]] = df[col]/df[0]\n",
+    "        ratios.to_excel(writer, index=False, sheet_name=sub)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "534963e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1_thresh_dfs = {}\n",
+    "sheet_name = \"params\"\n",
+    "for subreddit in SUBREDDIT_LABELS:\n",
+    "    eval_filepath = f\"../../Outputs/1_thread_start/{subreddit}/2_tuning/tuning_outputs.xlsx\"\n",
+    "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
+    "    \n",
+    "    # Ensure correct column names\n",
+    "    df = df[['n_feats', 'final_threshold']]\n",
+    "    df = df.set_index('n_feats').rename(columns={'final_threshold': subreddit})\n",
+    "\n",
+    "    s1_thresh_dfs[subreddit] = df\n",
+    "\n",
+    "df = pd.concat(s1_thresh_dfs, axis=1)\n",
+    "df.columns = df.columns.droplevel()\n",
+    "df.to_csv(f\"../../Publication_Outputs/1_Thread_Start/tuning_outputs/tuning_thresholds.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "416bea36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "CLASS_NAMES = [\"Stalled\", \"Started\"]\n",
+    "outfile = f\"../../Publication_Outputs/1_Thread_Start/tuning_outputs/thresholds.xlsx\"\n",
+    "\n",
+    "with pd.ExcelWriter(outfile) as writer:\n",
+    "    for sub, df in s1_cw_dfs.items():\n",
+    "        expanded = pd.json_normalize(df[\"cws\"].apply(parse_cw_string))\n",
+    "        df = df.join(expanded)[[\"n_feats\", 0,1]]\n",
+    "        ratios = df[['n_feats']].copy()\n",
+    "        for col in [0,1]:\n",
+    "            ratios[CLASS_NAMES[col]] = df[col]/df[0]\n",
+    "        ratios.to_excel(writer, index=False, sheet_name=sub)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "74532623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1_feat_dfs = {}\n",
+    "sheet_name = \"feature_importances\"\n",
+    "for subreddit in SUBREDDIT_LABELS:\n",
+    "    eval_filepath = f\"../../Outputs/1_thread_start/{subreddit}/2_tuning/tuning_outputs.xlsx\"\n",
+    "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
+    "    \n",
+    "    # Ensure correct column names\n",
+    "    df = df[['feature', 'mean_importance']]\n",
+    "    df['feature'] = df['feature'].apply(format_label)\n",
+    "\n",
+    "    s1_feat_dfs[subreddit] = df\n",
+    "\n",
+    "CLASS_NAMES = [\"Stalled\", \"Started\"]\n",
+    "outfile = f\"../../Publication_Outputs/1_Thread_Start/tuning_outputs/feat_importances.xlsx\"\n",
+    "\n",
+    "with pd.ExcelWriter(outfile) as writer:\n",
+    "    for sub, df in s1_feat_dfs.items():\n",
+    "        df.to_excel(writer, index=False, sheet_name=sub)"
    ]
   },
   {
@@ -306,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "9adf155b",
    "metadata": {},
    "outputs": [],
@@ -358,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "eb4dffc1",
    "metadata": {},
    "outputs": [],
@@ -383,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "23bcd5a8",
    "metadata": {},
    "outputs": [],
@@ -393,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5ce70b23",
    "metadata": {},
    "outputs": [],
@@ -414,21 +531,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "905bb0bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CLASS_NAMES = [\"Stalled\", \"Small\", \"Medium\", \"Large\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "23c89be6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "CLASS_NAMES = [\"Stalled\", \"Small\", \"Medium\", \"Large\"]\n",
     "outfile = f\"../../Publication_Outputs/2_Thread_Size/tuning_outputs/class_weights.xlsx\"\n",
     "\n",
     "with pd.ExcelWriter(outfile) as writer:\n",
@@ -452,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "7df9a0f7",
    "metadata": {},
    "outputs": [],
